// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create command > create empty project 1`] = `
Object {
  "/work/project-name/.gitignore": "node_modules/
.vivliostyle/
",
  "/work/project-name/README.md": "# Booook Titleeee

## References

- VFM <https://vivliostyle.github.io/vfm/#/vfm>
- Vivliostyle CLI <https://github.com/vivliostyle/vivliostyle-cli#readme>
- Vivliostyle Themes <https://github.com/vivliostyle/themes#readme>
- Awesome Vivliostyle <https://github.com/vivliostyle/awesome-vivliostyle#readme>
- Vivliostyle (GitHub) <https://github.com/vivliostyle>
- Vivliostyle <https://vivliostyle.org>
",
  "/work/project-name/package.json": "{
  \\"name\\": \\"booook-titleeee\\",
  \\"description\\": \\"Booook Titleeee\\",
  \\"author\\": \\"Authoooor\\",
  \\"version\\": \\"0.0.0\\",
  \\"type\\": \\"module\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"vivliostyle build\\",
    \\"preview\\": \\"vivliostyle preview\\"
  },
  \\"dependencies\\": {
    \\"@vivliostyle/cli\\": \\"0.0.1\\"
  }
}
",
  "/work/project-name/vivliostyle.config.js": "// @ts-check
import { defineConfig } from '@vivliostyle/cli';

export default defineConfig({
  title: \\"Booook Titleeee\\",
  author: \\"Authoooor\\",
  language: \\"en\\",
  browser: \\"chrome@100.0\\",
  image: \\"ghcr.io/vivliostyle/cli:0.0.1\\",
  entry: [\\"manuscript.md\\"],
});
",
}
`;

exports[`create command > create project with a custom-prompt template 1`] = `
Object {
  "/work/project-name/manuscript.md": "# Custom Prompt Custom String

You chosen option1
",
  "/work/project-name/package.json": "{
  \\"name\\": \\"booook-titleeee\\",
  \\"description\\": \\"Booook Titleeee\\",
  \\"author\\": \\"Authoooor\\",
  \\"version\\": \\"0.0.0\\",
  \\"type\\": \\"module\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"vivliostyle build\\",
    \\"preview\\": \\"vivliostyle preview\\"
  },
  \\"dependencies\\": {
    \\"@vivliostyle/cli\\": \\"0.0.1\\"
  }
}
",
  "/work/project-name/vivliostyle.config.js": "/** @type {import('@vivliostyle/cli').VivliostyleConfigSchema} */
export default {
  title: 'Booook titleeee',
  entry: 'manuscript.md',
};
",
}
`;

exports[`create command > create project with a default template 1`] = `
Object {
  "/work/project-name/default.md": "# Booook of the titleeee

BOOOOK OF THE TITLEEEE
booook of the titleeee
Booook Of The Titleeee
booookOfTheTitleeee
booook_of_the_titleeee
booook-of-the-titleeee
Booook of the Titleeee

projectPath: project-name
title: Booook of the titleeee
author: Authoooor
themePackage: theme-with-template@1.0.0
cliVersion: 0.0.1
coreVersion: 0.0.1
",
  "/work/project-name/package.json": "{
  \\"name\\": \\"booook-of-the-titleeee\\",
  \\"description\\": \\"Booook of the Titleeee\\",
  \\"author\\": \\"Authoooor\\",
  \\"version\\": \\"0.0.0\\",
  \\"type\\": \\"module\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"vivliostyle build\\",
    \\"preview\\": \\"vivliostyle preview\\"
  },
  \\"dependencies\\": {
    \\"@vivliostyle/cli\\": \\"0.0.1\\"
  }
}
",
  "/work/project-name/vivliostyle.config.js": "/** @type {import('@vivliostyle/cli').VivliostyleConfigSchema} */
export default {
  title: 'project-name',
  entry: 'default.md',
};
",
}
`;

exports[`create command > create project without any additional prompts 1`] = `
"// @ts-check
import { defineConfig } from '@vivliostyle/cli';

export default defineConfig({
  title: \\"Book\\",
  author: \\"john\\",
  language: \\"ja\\",
  browser: \\"chrome@100.0\\",
  image: \\"ghcr.io/vivliostyle/cli:0.0.1\\",
  entry: [\\"manuscript.md\\"],
});
"
`;

exports[`init command > test the init command 1`] = `
"// @ts-check
import { defineConfig } from '@vivliostyle/cli';

export default defineConfig({
  title: \\"My Title\\",
  author: \\"My Name\\",
  language: \\"en\\",
  browser: \\"chrome@100.0\\",
  image: \\"ghcr.io/vivliostyle/cli:0.0.1\\",
  entry: [\\"manuscript.md\\"],
});
"
`;

exports[`init command > test the init command with long options 1`] = `
"// @ts-check
import { defineConfig } from '@vivliostyle/cli';

export default defineConfig({
  title: \\"Sample Document\\",
  author: \\"Author Name <author@example.com>\\",
  language: \\"ja\\",
  size: \\"A5\\",
  theme: \\"style.css\\",
  browser: \\"chrome@100.0\\",
  image: \\"ghcr.io/vivliostyle/cli:0.0.1\\",
  entry: [\\"manuscript.md\\"],
});
"
`;

exports[`init command > test the init command with short options 1`] = `
"// @ts-check
import { defineConfig } from '@vivliostyle/cli';

export default defineConfig({
  title: \\"Sample Document2\\",
  author: \\"Author Name2 <author@example.com>\\",
  language: \\"pt-BR\\",
  size: \\"A3\\",
  theme: \\"theme.css\\",
  browser: \\"chrome@100.0\\",
  image: \\"ghcr.io/vivliostyle/cli:0.0.1\\",
  entry: [\\"manuscript.md\\"],
});
"
`;
